overlays/harbor/production/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`harbor.cryptocat.eu`)
      services:
        - name: harbor-web
          port: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-registry
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`registry.cryptocat.eu`)
      services:
        - name: harbor-core
          port: 80
